Add full-screen support closes #1

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 	<link rel="stylesheet" href="zmija.css">
     </head>
     <body>
-	<h1 style="margin: auto" id="score"></h1>
+	<h1 id="score"></h1>
         <table id="tabla" style="margin:auto; padding-top: 20px;">
 	</table>
 	<input id="control" style="opacity: 0"> 
-<audio controls style="display: none" id="xxx">
-  <source src="shiki.mp3" type="audio/mpeg">
-</audio>
+    <div id="overlay">
+        <h1 id="msg"></h1>
+    </div>
+    <audio controls style="display: none" id="xxx">
+    <source src="shiki.mp3" type="audio/mpeg">
+    </audio>
     </body>
 </html>
 
